fix collapsed leaderboard items

--- a/app/styles/_leaderboard.scss
+++ b/app/styles/_leaderboard.scss
@@ -18,6 +18,7 @@
 	.leaderboard_list {
     position: relative;
     font-size: 18px;
+    width: 100%;
 
 		.list-item {
       .img_container {
